--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "rusty-chip8"
 version = "0.1.0"
+description = "Chip8 Emulator"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.21", features = ["derive"] }
