--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "rusty-chip8"
-version = "0.1.0"
+version = "0.2.0"
 description = "Chip8 Emulator"
 edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.21", features = ["derive"] }
+colored = "2.1.0"
