--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ name = "rusty-chip8"
 version = "0.2.0"
 description = "Chip8 Emulator"
 edition = "2021"
+default-run = "rusty-chip8"
 
 [dependencies]
 clap = { version = "4.5.21", features = ["derive"] }
 colored = "2.1.0"
+macroquad = "0.4.13"
