refactor!: replace macroquad with minifb to reduce bloat
Signed-off-by: waseemR02 <waseem.riaz.9999@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ default-run = "rusty-chip8"
 [dependencies]
 clap = { version = "4.5.21", features = ["derive"] }
 colored = "2.1.0"
-macroquad = "0.4.13"
+minifb = { version = "0.28.0", default-features = false, features = ["x11"] }
