--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,8 @@ default-run = "rusty-chip8"
 [dependencies]
 clap = { version = "4.5.21", features = ["derive"] }
 colored = "2.1.0"
+fastrand = "2.3.0"
 minifb = { version = "0.28.0", default-features = false, features = ["x11"] }
+
+[features]
+shift = []
